Fix compiling and iOS 14 issues

--- a/MK1/MK1.entitlements
+++ b/MK1/MK1.entitlements
@@ -4,5 +4,7 @@
 <dict>
 	<key>com.apple.springboard.appbackgroundstyle</key>
 	<true/>
+	<key>com.apple.private.security.no-container</key>
+	<true/>
 </dict>
 </plist>
